--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "format": "npx prettier --write ."
   },
   "private": true,
   "dependencies": {
@@ -17,8 +18,24 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@primeuix/themes": "^1.2.5",
+    "@shashotolaha/ng-starter": "^1.0.3",
+    "@tailwindcss/postcss": "^4.1.17",
+    "angular-eslint": "^20.6.0",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.1",
+    "primeicons": "^7.0.0",
+    "primeng": "^19.1.4",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.17",
+    "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.3.0",
+    "typescript-eslint": "^8.47.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
